# AlertHooks

./: .gitignore  LICENSE  pyproject.toml  readme.md  requirements.txt
AlertHooks/: __init__.py  alertHooks.py  alertHooks_cmd.py  script.py
